--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,7 @@ $color-5: #4049CCff;
 }
 
 body {
+	position: relative;
     display: flex;
 	flex-direction: column;
     align-items: center;
@@ -23,7 +24,32 @@ body {
     margin: 0;
     padding: 5em 1.3em;
 	background: $color-1;
+	box-sizing: border-box;
+	
+	&::after {
+		content: '';
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		background: radial-gradient(#FFFFFFFF, #FFFFFFEE, #FFFFFFFF);
+		z-index: -1;
+	}
 }
+
+.background {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	object-fit: cover;
+	object-position: center;
+	z-index: -2;
+	will-change: transform; /* Improves performance */
+	transition: transform 0.1s ease-out;
+  }
 
 .banner {
 	display: flex;
@@ -32,9 +58,11 @@ body {
 	gap: 1em;
 	width: 100%;
 	max-width: 400px;
+	margin-bottom: 1.5em;
 	padding: 1em 1.2em;
 	border-radius: .8em;
-	border: 1px solid $color-3;
+	border: 1px solid #00000020;
+	box-shadow: 3px 3px 10px rgba($color-3, 20%);
 	background: $color-2;
 	.unpatti-logo {
 		height: 3em;
@@ -106,6 +134,7 @@ form {
 			border: 1px solid #aaa;
 			border-radius: 0.5em;
 			outline: none;
+			background: transparent;
 
             &.error {
                 border-color: red;
