--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -58,7 +58,6 @@ body {
 	gap: 1em;
 	width: 100%;
 	max-width: 400px;
-	margin-bottom: 1.5em;
 	padding: 1em 1.2em;
 	border-radius: .8em;
 	border: 1px solid #00000020;
@@ -101,6 +100,7 @@ form {
 	header {
 		font-family: "DM Serif Display", serif;
 		font-size: 1.3em;
+		margin-top: 1.8em;
 		margin-bottom: 0em;
 		color: $color-5;
 	}
