--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -127,6 +127,7 @@ form {
         gap: .2em;
         
 		input[type="text"],
+		input[type="date"],
 		textarea {
 			padding: 0.5em 1em;
 			min-height: 2.8em;
