--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -136,6 +136,7 @@ form {
 			border-radius: 0.5em;
 			outline: none;
 			background: transparent;
+			width: 100%;
 
             &.error {
                 border-color: red;
